--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'img/logo_aya.png' %}" alt="Логотип" style="height: 40px; margin-right: 10px;"> AYA TGMU
+                <img src="{% static 'img/logo_aya.png' %}" alt="Логотип" style="height: 40px; margin-right: 10px;"> AYA ATSMU
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
