--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}AYA TGMU{% endblock %}</title>
+    <title>{% block title %}AYA{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'img/logo_aya.png' %}" alt="Логотип" style="height: 40px; margin-right: 10px;"> AYA ATSMU
+                <img src="{% static 'img/logo_aya.png' %}" alt="Логотип" style="height: 40px; margin-right: 10px;"> AYA
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -111,7 +111,7 @@
 
     <footer class="footer mt-auto py-4 text-center">
         <div class="container">
-            <span>&copy; {% now "Y" %} AYA TGMU. Все права защищены.</span>
+            <span>&copy; {% now "Y" %} AYA. Все права защищены.</span>
             <div class="mt-2">
                 <a href="#" class="mx-2"><i class="fab fa-telegram"></i></a>
                 <a href="#" class="mx-2"><i class="fab fa-instagram"></i></a>
