--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,14 @@
         .glowing-border-container.leader-active { animation: spin 6s linear infinite; }
     </style>
     {% block extra_css %}{% endblock %}
+   
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <style>
+        .select2-container .select2-selection--single { height: 38px; border: 1px solid #ced4da; display: flex; align-items: center; }
+        .select2-container--default .select2-selection--single .select2-selection__arrow { height: 36px; }
+        /* Стиль для мульти-выбора */
+        .select2-container .select2-selection--multiple { min-height: 38px; border: 1px solid #ced4da; }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -120,6 +128,19 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    
+    <script>
+        // Автоматическая активация Select2 для всех селектов с классом 'use-select2'
+        $(document).ready(function() {
+            $('.use-select2').select2({
+                width: '100%',
+                placeholder: "Выберите из списка...",
+                allowClear: true
+            });
+        });
+    </script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
